--- a/package.json
+++ b/package.json
@@ -1,22 +1,40 @@
 {
+  "name": "pos_api_restaurant",
+  "version": "1.0.0",
+  "description": "Restaurant POS API migrated to Node.js with TypeScript",
+  "main": "src/server.ts",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
+    "start": "node dist/server.js"
+  },
   "dependencies": {
+    "@types/dotenv": "^8.2.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "pos_api_restaurant": "file:",
     "socket.io": "^4.8.1",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/socket.io": "^3.0.2",
-    "@types/sqlite3": "^5.1.0"
+    "@types/sqlite3": "^5.1.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^5.8.3"
   }
 }
