custom query param parser
cookies added

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/dotenv": "^8.2.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
