--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/dotenv": "^8.2.3",
+    "@types/socket.io-client": "^3.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
